# rockfish-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/rockfish_mcp/: __main__.py  client.py  manta_client.py  sdk_client.py  server.py
tests/: conftest.py  incidents.yaml  test_create_incident_dataset.py  test_dataset_query_bookmarks.py  test_list_resources.py  test_manta_client.py  test_manta_tools.py
