[build-system]
requires = ["setuptools>=61.0", "wheel~=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "rockfish-mcp"
dynamic = ["version"]
description = "A Model Context Protocol server providing tools to interact with the Rockfish AI platform for synthetic data generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rockfish Data" }]
keywords = ["rockfish", "synthetic-data", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.1",
    "python-dotenv>=1.0.0",
    "rockfish[labs]>=0.62.0"
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.10.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=4.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
rockfish-mcp = "rockfish_mcp.server:cli"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Rockfish-Data/rockfish-mcp/README.md"
Repository = "https://github.com/Rockfish-Data/rockfish-mcp"
Issues = "https://github.com/Rockfish-Data/rockfish-mcp/issues"
Documentation = "https://docs.rockfish.ai"

[tool.setuptools.dynamic]
version = {attr = "rockfish_mcp.__version__"}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
